# ocaml

./: .gitignore  Makefile  README.md  dune-project  proj.opam  xxprojxx.opam  xxprojxx.sublime-project
ocpractice/lib/: dune
ocpractice/test/: a.ml  dune
sub1/lib/: dune
sub1/test/: a.ml  dune
sub2/lib/: a.ml  dune
sub2/test/: dune
test/: dune  run_tests.ml
treeFile/lib/: dune  treeFile.ml
treeFile/test/: a.ml  b.ml  dune  treeFile.ml
